# bug-hive

./: .env.example  .gitignore  ERROR_AGGREGATOR_README.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART_API.md  README.md  README_WORKFLOW.md  TASK_11_COMPLETE.md  cli.py  docker-compose.workers.yml  pyproject.toml  test_api.py  verify_extended_thinking.sh  verify_setup.py
.claude/: PROJECT_CONTEXT.md
docs/: ARCHITECTURE.md  COMPACTION_IMPLEMENTATION.md  DELIVERY_SUMMARY.md  ERROR_PATTERN_DETECTION.md  EXTENDED_THINKING.md  EXTENDED_THINKING_IMPLEMENTATION.md  FALLBACK_CHAIN_IMPLEMENTATION.md  FILES_CREATED_TASK6.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PARALLEL_VALIDATION_IMPLEMENTATION.md  PARALLEL_VALIDATION_QUICK_REFERENCE.md  PRD.md  PRP.md  QUICK_START_ANALYZER.md  TASK_04_BROWSER_COMPLETE.md  TASK_12_COMPLETE.md  TASK_7_COMPLETE.md  TOOL_CALLING_IMPLEMENTATION.md  TOOL_CALLING_QUICK_REFERENCE.md  Task_3_LLM_Router_COMPLETED.md  WORKFLOW.md  browser_integration_guide.md  cli-architecture.md  cli-examples.md  cli-files-created.txt  cli-installation.md  cli-quickstart.md  database-architecture.md  database-quickstart.md  database-schema.md  implementation-summary-task6.md  linear-integration.md  llm-fallback-chain.md  message_compaction_usage.md  page-analyzer-agent.md  task-10-summary.md  task-11-workers-summary.md  workers-quickstart.md
docs/agents/: CLASSIFIER_SUMMARY.md  classifier.md
examples/: analyzer_demo.py  browser_demo.py  classifier_demo.py  cli_demo.sh  fallback_chain_demo.py  integration_example.py  run_workflow.py  test_linear_integration.py  test_linear_mock_only.py
scripts/: run_beat.sh  run_flower.sh  run_worker.sh
src/: __init__.py
src/agents/: __init__.py  analyzer.py  classifier.py  crawler.py  tools.py
src/agents/prompts/: __init__.py  analyzer.py  classifier.py  crawler.py  reporter.py
src/api/: FILES_CREATED.txt  IMPLEMENTATION.md  README.md  __init__.py  example_usage.py  main.py  schemas.py
src/api/middleware/: __init__.py  logging.py
src/browser/: README.md  __init__.py  client.py  extractor.py  navigator.py
src/cli/: README.md  __init__.py  main.py
src/core/: __init__.py  config.py  logging.py
src/db/: README.md  __init__.py  database.py  example_usage.py  models.py
src/graph/: __init__.py  edges.py  nodes.py  parallel.py  state.py  thinking_validator.py  workflow.py
src/integrations/: README.md  __init__.py  linear.py  linear_mock.py  linear_real.py  reporter.py
src/llm/: INTEGRATION.md  README.md  __init__.py  anthropic.py  compactor.py  cost_tracker.py  example_usage.py  openrouter.py  requirements.txt  router.py  token_budget.py  validate_setup.py
src/models/: __init__.py  bug.py  crawl.py  evidence.py  page.py  raw_issue.py
src/utils/: __init__.py  error_aggregator.py  progress_tracker.py
src/workers/: README.md  __init__.py  celery_app.py  session_manager.py  tasks.py
tests/: __init__.py  test_agent_tools.py  test_analyzer.py  test_classifier_logic.py  test_compactor.py  test_config.py  test_error_aggregator.py  test_extended_thinking.py  test_fallback_chain.py  test_logging.py  test_parallel_validation.py  test_progress_tracker.py  test_token_budget.py  test_workflow.py
tests/browser/: test_client.py  test_extractor.py  test_navigator.py
tests/integration/: __init__.py  test_agent_harness.py  test_checkpointing.py  test_fallback_chain.py
tests/workers/: __init__.py  test_session_manager.py  test_tasks.py
(+10 files in other folders)
